syntax = "proto3";

package api.ipfs.blockstore;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/4everland/ipfs-servers/api/blockstore;blockstore";
option java_multiple_files = true;
option java_package = "api.ipfs.blockstore";

service Blockstore {
  rpc DeleteBlock (Cid) returns (google.protobuf.Empty);
  rpc Has(Cid) returns (google.protobuf.BoolValue);
  rpc Get(Cid) returns (Block);

  rpc GetSize(Cid) returns (google.protobuf.Int32Value);
  rpc Put(Block) returns (google.protobuf.Empty);
  rpc PutMany(stream Block) returns (google.protobuf.Empty);

  rpc AllKeysChan(google.protobuf.Empty) returns (stream Cid);

}

message Cid {
  bytes str = 1;
}

message Block {
  Cid cid = 1;
  bytes data = 2;
}