syntax = "proto3";
package ipfs.gateway.conf;

option go_package = "ipfs-servers/app/gateway/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string addr = 1;
    google.protobuf.Duration timeout = 2;
  }
  HTTP http = 1;

}

message Data {
  oneof blockstore {
    ReadOnlyBlockstore ro = 1;
    Blockstore rw = 2;
  }
}

message ReadOnlyBlockstore {
  S3 storage = 1;
  Cache cache = 2;
}

message Blockstore {
  string uri = 1;
  string cert = 2;
}

message Cache {
  int64 lruSize = 1;
  string basePath = 2;
  string indexPath = 3;
}

message S3 {
  string endpoint = 1;
  string region = 2;
  string bucket = 3;
  string accessKey = 4;
  string secretKey = 5;
}
